add my interests

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           </div>
         </div>
         <div class="Profile_right">
-          <h3><i>My skills</i></h3>
-          <p><img src="my_skill.jpeg" alt=""></p>
+          <h3><i>My interests</i></h3>
+          <p><img src="my_interests.jpeg" alt=""></p>
         </div>
       </div>
 
