--- a/index.html
+++ b/index.html
@@ -92,17 +92,16 @@
 			        <a href="https://tsubumemo.herokuapp.com/" target="_blank"><img src="TsubuMeMo.png"></a>
 			        <div class="caption">
 				        <h3><b>TsubuMeMo 〜つぶやき型メモ〜</b></h3>
-				        <p>SNSのタイムラインのようにメモを残すサービスです。つぶやきながらメモすることで、時間の流れとともにメモを振り返ることができます。</p>
+				        <p>SNSのタイムラインのようにメモを残すサービスです。</p>
 			        </div>
 		        </div>
 		      </div>
 		      
 	        <div class="col-md-6 col-sm-6 col-xs-6 Work2">
 		        <div class="thumbnail">
-			        <img src="Next_application.001.jpeg">
+			        <a href="https://github.com/hirotsuru314/NLP" target="_blank"><img src="CosineSimilarity.png"></a>
 			        <div class="caption">
-				        <h3>Coming soon!</br></br></br></h3>
-				        
+				        <h3>TF-IDFとCos類似度による文書の類似度計算モジュール</br></br></h3>
 			        </div>
 		        </div>
 		      </div>
