--- a/index.html
+++ b/index.html
@@ -38,17 +38,18 @@
 	  
   </head>
   <body>
-	  <header class="header clearfix">
-      <nav>
-        <h1><a href="http://www.hirotsuru.sakura.ne.jp/portfolio/index.html">Hirotsuru's portfolio</a></h1>
-          <ul class="clearfix">
-  					<li><a href="#Profile">Profile</a></li>
-  					<li><a href="#Works">Works</a></li>
-    				<li><a href="#Blog">Blog</a></li>
-  					<li><a href="#Vision">Vision</a></li>
-  			  </ul>
-			</nav>
-	  </header>
+    <div class = "wrap">
+  	  <header class="header clearfix">
+        <nav>
+          <h1><a href="http://www.hirotsuru.sakura.ne.jp/portfolio/index.html">Hirotsuru's portfolio</a></h1>
+            <ul class="clearfix">
+    					<li><a href="#Profile">Profile</a></li>
+    					<li><a href="#Works">Works</a></li>
+      				<li><a href="#Blog">Blog</a></li>
+    					<li><a href="#Vision">Vision</a></li>
+    			  </ul>
+  			</nav>
+  	  </header>
 <!----------  トップ画面	---------->  
     <div class="Top">
         <p id="motto">Challenging myself,<br>pushing my limits away!</p>
@@ -163,5 +164,6 @@
         
         </div>
       </div>
+    </div>
 	</body>
 </html>
